# idxr

./: .gitignore  404.html  AGENT.md  DOC.md  ERROR_HANDLING.md  FAQ.md  MODELS_NONE_BEHAVIOR.md  QUERYING.md  QUERY_QUICKSTART.md  README.md  TRUNCATION_EXAMPLES.md  cli.py  index.html  load_model_registry.py  mkdocs.yml  models.py  prepare_datasets.py  pyproject.toml  vectorize.py
.github/workflows/: docs.yml
docs/: getting-started.md  index.md  publishing.md
docs/prepare-datasets/: config.md  overview.md
docs/prepare-datasets/args/: config.md  directory-size.md  log-level.md  manifest.md  model.md  output-root.md
docs/query/: api-reference.md  config.md  examples.md  getting-started.md  overview.md
docs/vectorize/: config.md  overview.md
docs/vectorize/args/: batch-size.md  client-type.md  (+17 more)
examples/: query_example.py
examples/quickstart/: README.md  requirements.txt
getting-started/: index.html
prepare-datasets/config/: index.html
prepare-datasets/overview/: index.html
prepare_datasets_lib/: __init__.py  cli.py  config.py  drop.py  manifest.py  partitions.py
publishing/: index.html
query/api-reference/: index.html
query/config/: index.html
query/examples/: index.html
query/getting-started/: index.html
query/overview/: index.html
scripts/: publish_pypi.sh  sync_public_repo.sh  update_from_public.sh
search/: search_index.json
tests/: README.md  test_models_none_behavior.py  test_query_client.py  test_query_config.py
vectorize/config/: index.html
vectorize/overview/: index.html
vectorize_lib/: __init__.py  cli.py  collection_strategies.py  configuration.py  documents.py  e2e.py  indexing.py  logging_config.py  partitions.py  query_client.py  query_config.py  token_management.py  utils.py  validation.py
vectorize_lib/compact/: __init__.py  compact-prompt.md  document_compactor.py
(+30 files in other folders)
