[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idxr"
version = "0.2.0"
description = "Model-centric, config-driven, fail-stop-retry indexing toolkit for managing your index in vector databases."
readme = "README.md"
requires-python = ">=3.9"
license = "LicenseRef-Proprietary"
authors = [{name = "darshitac11", email = "darshitac11@gmail.com"},{name = "cruxcode", email = "swaroopshyam0@gmail.com"}]
keywords = ["vectorstore", "chromadb", "indexing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "chromadb>=1.1.1,<2.0.0",
  "openai>=1.55.0,<2.0.0",
  "pydantic>=1.10",
  "python-dotenv>=1.0",
  "tiktoken>=0.6",
  "PyYAML>=6.0",
]

[project.urls]
Repository = "https://github.com/darshitac11/adri-agents"
Documentation = "https://github.com/darshitac11/adri-agents/tree/main/indexer"

[project.scripts]
idxr = "indexer.cli:main"
vectorize = "indexer.vectorize:main"
prepare-datasets = "indexer.prepare_datasets:main"

[tool.setuptools]
package-dir = {"indexer" = "."}
packages = [
  "indexer",
  "indexer.prepare_datasets_lib",
  "indexer.vectorize_lib",
  "indexer.vectorize_lib.compact",
]

[tool.setuptools.package-data]
"indexer.vectorize_lib.compact" = ["compact-prompt.md"]
"indexer" = [
  "README.md",
  "DOC.md",
  "FAQ.md",
  "AGENT.md",
  "TRUNCATION_EXAMPLES.md",
  "ERROR_HANDLING.md",
]
